--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<h4>NOMBRE APELLIDO</h4>
 		<h5>Slogan personal winner</h5>
 		<p>Suspendisse dapibus aliquam lorem ac congue.</p>
-		<address><a href="mailto:mail@mail.com">mail@mail.com</a></address>
+		<address><a href="mailto:jruiztagle3@uc.cl">jruiztagle3@uc.cl</a></address>
 	</div><!--/dupla segunda-->
 	<hr />
 </div><!--/somos-->
