--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 <h3>QUIENES SOMOS</h3>
 <div id="somos">
 	<div class="dupla primera">
-		<h4>NOMBRE APELLIDO</h4>
+		<h4>CAMILA RÍOS</h4>
 		<h5>Slogan personal winner</h5>
 		<p>Praesent euismod et urna vitae aliquam aliquam.</p>
 		<address><a href="mailto:crios3@uc.cl">crios3@uc.cl</a></address>
 	</div><!--/dupla primera-->
 	<div class="dupla segunda">
-		<h4>NOMBRE APELLIDO</h4>
+		<h4>JOSEFINA RUIZ-TAGLE</h4>
 		<h5>Slogan personal winner</h5>
 		<p>Suspendisse dapibus aliquam lorem ac congue.</p>
 		<address><a href="mailto:jruiztagle3@uc.cl">jruiztagle3@uc.cl</a></address>
