--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div id="contenido">
 <header>
 	<h1>jose y cam</h1>
-	<h2>pongan aquí su slogan winner</h2>
+	<h2>Amigas unidas jamás serán vencidas</h2>
 </header>
 <video autoplay loop preload="auto" poster="media/video.jpg">
 	<source src="media/video.webm" type="video/webm">
