--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="title" content="jose y cam">
-<title>jose y cam</title>
+<meta name="title" content="JOSE Y CAM">
+<title>JOSE Y CAM</title>
 <!-- Search Engine -->
 <meta name="description" content="cambiar">
 <meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
@@ -34,7 +34,7 @@
 <body>
 <div id="contenido">
 <header>
-	<h1>jose y cam</h1>
+	<h1>JOSE Y CAM</h1>
 	<h2>Amigas unidas jamás serán vencidas</h2>
 </header>
 <video autoplay loop preload="auto" poster="media/video.jpg">
