--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!--no confundir con la imagen representativa del sitio-->
 <link rel="icon" type="image/png" href="media/favicon.png" />
 <!--ahora vinculamos los estilos-->
-<link href="<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif|Spectral+SC" rel="stylesheet">">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:300,600" rel="stylesheet">
 <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
 <body>
