--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="title" content="JOSE Y CAM">
-<title>JOSE Y CAM</title>
+<meta name="title" content="JOCA">
+<title>JOCA</title>
 <!-- Search Engine -->
 <meta name="description" content="cambiar">
 <meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
@@ -18,7 +18,7 @@
 <meta name="twitter:title" content="cambiar">
 <meta name="twitter:description" content="cambiar">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="cambiar">
+<meta name="og:title" content="JOCA">
 <meta name="og:description" content="cambiar">
 <meta name="og:image" content="cambiar">
 <meta name="og:url" content="cambiar">
@@ -34,8 +34,10 @@
 <body>
 <div id="contenido">
 <header>
-	<h1>JOSE Y CAM</h1>
-	<h2>Amigas unidas jamás serán vencidas</h2>
+	<h1>JOCA</h1>
+	<h2>Diseñar el mundo</h2>
+
+	<h1>JOCA</h1>
 </header>
 <video autoplay loop preload="auto" poster="media/video.jpg">
 	<source src="media/video.webm" type="video/webm">
@@ -46,14 +48,14 @@
 <div id="somos">
 	<div class="dupla primera">
 		<h4>CAMILA RÍOS</h4>
-		<h5>Slogan personal winner</h5>
-		<p>Praesent euismod et urna vitae aliquam aliquam.</p>
+		<h5>"Diseña tu vida"</h5>
+		<p>Estudiante Diseño PUC.</p>
 		<address><a href="mailto:crios3@uc.cl">crios3@uc.cl</a></address>
 	</div><!--/dupla primera-->
 	<div class="dupla segunda">
 		<h4>JOSEFINA RUIZ-TAGLE</h4>
-		<h5>Slogan personal winner</h5>
-		<p>Suspendisse dapibus aliquam lorem ac congue.</p>
+		<h5>"Sobre gustos no hay nada escrito"</h5>
+		<p>Estudiante Diseño PUC.</p>
 		<address><a href="mailto:jruiztagle3@uc.cl">jruiztagle3@uc.cl</a></address>
 	</div><!--/dupla segunda-->
 	<hr />
@@ -61,54 +63,57 @@
 <h3>PORTAFOLIO</h3>
 <div id="portafolio">
 	<div class="item">
-		<figure><img src="media/foto-01.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+			<h4>FRIX</h4>
+		<figure><img src="media/foto-11.jpg"/></figure>
+	  	<p>Cinta con gel hidrocoloide, para tener mejor agarre al escalar y curar callos a la vez.</p>
+  	<figure><img src="media/foto-01.jpg"/></figure>
 	</div><!--/item-->
 	<div class="item">
+			<h4>MIGO</h4>
 		<figure><img src="media/foto-02.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Juego de mesas juvenil basado en la pieza oscura. Todos deben inteoducir sus manos dentro de Migo y hay un encargado de buscar. Éste debe lograr adivinar de quién es la mano que atrapa.</p>
 	</div><!--/item-->
 	<div class="item">
+			<h4>COJÍN PARA GUAGUA</h4>
 		<figure><img src="media/foto-03.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Cojín con doble función. Al amarrar sus dos extremos sirve para posar a la guagua y al usarlo rodeando la cintura de la madre sirve como cojín de amamantamiento.</p>
 	</div><!--/item-->
 	<div class="item">
+		<h4>PROTECTOR DE HUEVO</h4>
 		<figure><img src="media/foto-04.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Esfera protectora de huevos hecha con papel de diario, el cual esta al interior, que protege al huevo de hasta 10 mts. de caída. </p>
 	</div><!--/item-->
 	<div class="item">
-		<figure><img src="media/foto-04.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+			<h4>CLICK EAT</h4>
+		<figure><img src="media/foto-09.jpg"/></figure>
+	  	<p>Plato para acampar en trekkings que logra calentar la comida por sí solo. Sirve para ahorrar peso y espacio en la mochila de trekking, logrando alivianar el transcurso.</p>
 	</div><!--/item-->
 	<div class="item">
-		<figure><img src="media/foto-05.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+		  	<h4>CRANCH</h4>
+		  <figure><img src="media/foto-12.jpg"/></figure>
+	  	<p>Barquillo para helados con sabor a chupilca. Cumple con la función de packaging para el helado y además se come.</p>
+			<figure><img src="media/foto-05.jpg"/></figure>
 	</div><!--/item-->
 	<div class="item">
+			<h4>MÁQUINA DE COSER</h4>
 		<figure><img src="media/foto-06.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Modelo 3D de máquina de coser antigua, Singer, llevada a la modernidad.</p>
 	</div><!--/item-->
 	<div class="item">
+			<h4>AUTO DE CARRERAS</h4>
 		<figure><img src="media/foto-07.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Modelo 3D de auto de carreras futurista.</p>
 	</div><!--/item-->
 	<div class="item">
+			<h4>RELOJ DE MESA</h4>
 		<figure><img src="media/foto-08.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<p>Modelo 3D de reloj de mesa con distintos diseños para usar como despertador. Es una misma bade de reloj que mediante sus distintos diseños se adapta a distintos grupos de personas: adolescentes, niños, empresarios, etc. </p>
+    <figure><img src="media/foto-10.jpg"/></figure>
 	</div><!--/item-->
 </div><!--/portafolio-->
 
 <footer>
-	<p>Procesos de Producción · sección web · segundo semestre · 2018</p>
+	<p>"TODO LO QUE PUEDAS IMAGINAR ES REAL"</p>
 	<hr />
 </footer>
 
